--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/opportunities.py": {
-      "runtime": "python3.12"
-    },
-    "api/stats.py": {
-      "runtime": "python3.12"
+    "api/*.py": {
+      "runtime": "vercel-python@0.6.0"
     }
   },
   "rewrites": [
